samples/_failures_safe/1761646320_5889c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76f54278.c:152:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  152 | StateHandler state_hand
      | ^~~~~~~~~~~~
